--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Specifies intentionally untracked files to ignore when using Git
+﻿# Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
 *~
@@ -27,7 +27,6 @@ platforms/
 plugins/
 plugins/android.json
 plugins/ios.json
-www/
 $RECYCLE.BIN/
 
 .DS_Store
